# yuy

./: LICENSE  README.md
yuy/: Cargo.toml  README.md
yuy/src/: cli.rs  config.rs  main.rs  utils.rs
yuy/src/commands/: doctor.rs  download.rs  info.rs  list.rs  mod.rs  remove.rs  run.rs  runtime.rs  setup.rs
