[package]
name = "yuy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
indicatif = "0.17"
colored = "2.1"
anyhow = "1.0"
dirs = "5.0"
futures-util = "0.3"

[[bin]]
name = "yuy"
path = "src/main.rs"
